@@ -6,6 +6,7 @@ import de.telran.shoponline.entity.enums.Role;
 import de.telran.shoponline.mapper.Mappers;
 import de.telran.shoponline.repository.CartRepository;
 import de.telran.shoponline.repository.UsersRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,6 +14,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -35,9 +37,12 @@ class UsersServiceTest {
     @InjectMocks
     private UsersService usersServiceTest;
 
-    @Test
-    void getUsersTest() {
-        UsersDto expectedUser = UsersDto.builder()
+    private UsersDto expectedUserDto;
+    private Users expectedUser;
+
+    @BeforeEach
+    void setUp() {
+        expectedUserDto = UsersDto.builder()
                 .userID(1L)
                 .email("test@test.com")
                 .role(Role.CLIENT)
@@ -45,30 +50,26 @@ class UsersServiceTest {
                 .phoneNumber("123456789")
                 .passwordHash("******")
                 .build();
+        expectedUser = Users.builder()
+                .userID(1L)
+                .email("test@test.com")
+                .role(Role.CLIENT)
+                .name("Test")
+                .phoneNumber("123456789")
+                .passwordHash("******")
+                .build();
+    }
 
-//        when(usersRepositoryMock.findAll()).thenReturn((Iterable<Users>) List.of(expectedUser));
-
+    @Test
+    void getUsersTest() {
+        when(usersRepositoryMock.findAll()).thenReturn(Arrays.asList(expectedUser));
+        when(mappersMock.convertToUsersDto(any(Users.class))).thenReturn(expectedUserDto);
+        List<UsersDto> actualUserDtoList = usersServiceTest.getUsers();
+        assertEquals(Arrays.asList(expectedUserDto), actualUserDtoList);
     }
 
     @Test
     void getUserByIdTest() {
-        UsersDto expectedUserDto = UsersDto.builder()
-                .userID(1L)
-                .email("test@test.com")
-                .role(Role.CLIENT)
-                .name("Test")
-                .phoneNumber("123456789")
-                .passwordHash("******")
-                .build();
-
-        Users expectedUser = Users.builder()
-                .userID(1L)
-                .email("test@test.com")
-                .role(Role.CLIENT)
-                .name("Test")
-                .phoneNumber("123456789")
-                .passwordHash("******")
-                .build();
 
         when(usersRepositoryMock.findById(anyLong())).thenReturn(Optional.of(expectedUser));
         when(mappersMock.convertToUsersDto(any(Users.class))).thenReturn(expectedUserDto);
